# fortunes-from-crypt

./: README.md  fortunes-from-crypt.cabal  stack.yaml
src/: Fortunes.hs  Lib.hs  PartsOfSpeech.hs
