name:                fortunes-from-crypt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/spinnylights/fortunes-from-crypt#readme
license:             BSD3
license-file:        LICENSE
author:              Zoë Sparks
maintainer:          zoe@milky.flowers
copyright:           Copyright (c) 2017 Zoë Sparks
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       PartsOfSpeech
  build-depends:       base >= 4.7 && < 5
                     , MonadRandom == 0.1.6
  default-language:    Haskell2010

executable fortunes-from-crypt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fortunes-from-crypt
  default-language:    Haskell2010

test-suite fortunes-from-crypt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fortunes-from-crypt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/spinnylights/fortunes-from-crypt
